refactor: separate out sawtooth-utils and rearrange protos
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/sawtooth-daml-common/pom.xml
+++ b/sawtooth-daml-common/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>keymanager</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>daml-on-sawtooth</groupId>
+      <artifactId>sawtooth-utils</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
 
     <!-- Hyperledger Sawtooth -->
     <dependency>
