--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
     <module>daml-on-sawtooth-protobufs</module>
     <module>timekeeper</module>
     <module>keymanager</module>
+    <module>sawtooth-utils</module>
     <module>sawtooth-daml-tp</module>
     <module>sawtooth-daml-rpc</module>
     <module>sawtooth-daml-common</module>
