refactor: remove timekeeper,sawtooth-mttp,sawtooth-utils,and keymanager
replaced in favor of paralos and independent timekeeper versions

Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/docker/daml-test.yaml
+++ b/docker/daml-test.yaml
@@ -121,7 +121,7 @@ services:
       - postgres
 
   timekeeper:
-    image: timekeeper:${ISOLATION_ID}
+    image: blockchaintp/timekeeper:BTP2.1.0rc14
     command: "/opt/timekeeper/entrypoint.sh -vv tcp://validator:4004"
     depends_on:
       - validator
