--- a/pom.xml
+++ b/pom.xml
@@ -93,13 +93,9 @@
   </distributionManagement>
 
   <modules>
-    <module>timekeeper</module>
-    <module>keymanager</module>
-    <module>sawtooth-utils</module>
     <module>sawtooth-daml-tp</module>
     <module>sawtooth-daml-rpc</module>
     <module>sawtooth-daml-common</module>
-    <module>sawtooth-mttp</module>
     <module>build-tools</module>
   </modules>
 
@@ -107,6 +103,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <protobuf.version>3.10.0</protobuf.version>
     <sawtooth.sdk.version>v0.1.3</sawtooth.sdk.version>
+    <paralos.version>0.0.1</paralos.version>
+    <timekeeper.version>1.3.10</timekeeper.version>
     <daml.sdk.version>1.3.0</daml.sdk.version>
     <scala.lang.version>2.12</scala.lang.version>
   </properties>
@@ -279,6 +277,26 @@
         <groupId>org.javatuples</groupId>
         <artifactId>javatuples</artifactId>
         <version>1.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.blockchaintp</groupId>
+        <artifactId>keymanager</artifactId>
+        <version>${paralos.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.blockchaintp</groupId>
+        <artifactId>sawtooth-mttp</artifactId>
+        <version>${paralos.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.blockchaintp</groupId>
+        <artifactId>sawtooth-utils</artifactId>
+        <version>${paralos.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.blockchaintp</groupId>
+        <artifactId>timekeeper</artifactId>
+        <version>${timekeeper.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
