build: update build to match standard patterns
Signed-off-by: Kevin O'Donnell <kevin@blockchaintp.com>

--- a/docker/docker-compose-build.yaml
+++ b/docker/docker-compose-build.yaml
@@ -19,7 +19,7 @@ services:
   daml-on-sawtooth-build:
     build:
       context: .
-      dockerfile: daml-on-sawtooth-build.docker
+      dockerfile: toolchain.docker
     image: daml-on-sawtooth-build-local:${ISOLATION_ID}
     container_name: daml-on-sawtooth-build-local
     volumes:
