fix: Bump back the SL4J as we are getting an rte
Signed-off-by: Ryan Roberts <ryan@blockchaintp.com>

--- a/sawtooth-daml-rpc/pom.xml
+++ b/sawtooth-daml-rpc/pom.xml
@@ -116,6 +116,10 @@
     </dependency>
     <dependency>
       <groupId>com.daml</groupId>
+      <artifactId>participant-integration-api_${scala.lang.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.daml</groupId>
       <artifactId>participant-state_${scala.lang.version}</artifactId>
     </dependency>
     <dependency>
