--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # Default owners
-* @blockchaintp/btp-engineering @mziolekda @dasormeter
+* @blockchaintp/btp-engineering
 
 # Documentation has additional team to review
 /docs/* @blockchaintp/btp-engineering @blockchaintp/btp-documentation
