--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,17 +3,40 @@ default_language_version:
   # force all unspecified python hooks to run python3
   python: python3
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
+    hooks:
+      - id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: check-json
+      - id: check-merge-conflict
+      - id: check-yaml
+        exclude: "charts/.*"
+        args:
+          - --allow-multiple-documents
+      - id: detect-aws-credentials
+        args:
+          - --allow-missing-credentials
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: no-commit-to-branch
+        args:
+          - --pattern
+          - '^(?!((fix|feature|refactor)\/[a-zA-Z0-9\-]+)$).*'
+      - id: trailing-whitespace
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.19.0
+    rev: v2.31.0
     hooks:
       - id: commitizen
         stages: [commit-msg]
   - repo: https://github.com/gruntwork-io/pre-commit
-    rev: v0.1.15
+    rev: v0.1.17
     hooks:
       - id: helmlint
   - repo: https://github.com/gherynos/pre-commit-java
-    rev: v0.1.0
+    rev: v0.2.0
     hooks:
       - id: checkstyle
         args:
@@ -23,7 +46,7 @@ repos:
       - id: cpd
         exclude: ".*/src/test/.*"
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.5
+    rev: 3.0.0
     hooks:
       - id: forbid-binary
         exclude: ".*.(png|jpg|jpeg)$"
@@ -46,36 +69,15 @@ repos:
     hooks:
       - id: markdownlint
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.0.0-rc.0
+    rev: v8.22.0
     hooks:
       - id: eslint
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
-    hooks:
-      - id: check-added-large-files
-      - id: check-case-conflict
-      - id: check-executables-have-shebangs
-      - id: check-json
-      - id: check-merge-conflict
-      - id: detect-aws-credentials
-      - id: detect-private-key
-      - id: end-of-file-fixer
-      - id: mixed-line-ending
-      - id: no-commit-to-branch
-        args:
-          - --pattern
-          - '^(?!((fix|feature)\/[a-zA-Z0-9\-]+)$).*'
-      - id: trailing-whitespace
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-go
-    rev: v1.0.1
-    hooks:
-      - id: checkmake
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.10
+    rev: v1.3.0
     hooks:
       - id: forbid-tabs
-        exclude: "^(Makefile|.*.go|.*.mk)$"
-  - repo: git://github.com/doublify/pre-commit-go
+        exclude: "^(.*/?Makefile|.*.mk|.*.go)$"
+  - repo: https://github.com/doublify/pre-commit-go
     rev: 208a4aaa7f86b44e961eaaea526743b920e187a0
     hooks:
       - id: fmt
@@ -87,27 +89,36 @@ repos:
       - id: fmt
       - id: cargo-check
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.26.3
+    rev: v1.27.1
     hooks:
       - id: yamllint
         exclude: ".*/templates/.*"
   - repo: https://github.com/IamTheFij/docker-pre-commit
-    rev: v2.0.1
+    rev: v2.1.0
     hooks:
-      - id: docker-compose-check
       - id: docker-compose-check
         files: docker-compose.*y[a]{0,1}ml$
       - id: docker-compose-check
         files: "^docker/.*yaml$"
       - id: hadolint
         files: ".*.docker$"
+        args:
+          - --ignore
+          - DL3008
+          - --ignore
+          - DL3013
       - id: hadolint
         files: "Dockerfile.*"
+        args:
+          - --ignore
+          - DL3008
+          - --ignore
+          - DL3013
   - repo: https://gitlab.com/daverona/pre-commit/cpp
-    rev: 0.8.0 # use the most recent version
+    rev: 0.8.0
     hooks:
-      - id: docker-clang-format # clang-format in Docker container
-      - id: cpplint # cpplint in Docker container
-      - id: docker-cppcheck # cppcheck in Docker container
+      - id: docker-clang-format
+      - id: cpplint
+      - id: docker-cppcheck
         args:
           - --force
