docs: update ownership following IP assignation
Signed-off-by: duncanjw <duncan@paravela.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
 site_name: Daml on Sawtooth
 site_author: BTP
 theme: readthedocs
-copyright: Copyright &copy; 2022 Blockchain Technology Partners
+copyright: Copyright &copy; 2023 Paravela Limited
